docs: CLAUDE.md에 작업 원칙 추가
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>